carteira_investimentos/src/tests/assets_tests/snapshots/carteira_investimentos__tests__assets_tests__test_repository__tests__create_asset.snap
---
source: src/tests/assets_tests/test_repository.rs
expression: asset
---
{
  "id": 1,
  "name": "Bitcoin",
  "unit_value": 10.05,
  "registrant_id": 1,
  "registered_at": "+002026-07-31T20:14:20.355079000Z"
}
