carteira_investimentos/src/tests/assets_tests/snapshots/carteira_investimentos__tests__assets_tests__test_repository__tests__insert_owned_asset.snap
---
source: src/tests/assets_tests/test_repository.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 10.05,
    "value_delta": 0.0,
    "quantity_owned": 3.0,
    "purchase_history": [
      {
        "bought_at": "[TIMESTAMP]",
        "bought_for": 10.05,
        "quantity_bought": 3.0,
        "value_delta": 0.0
      }
    ]
  },
  {
    "id": 2,
    "name": "Ethereum",
    "unit_value": 9.5,
    "value_delta": 0.0,
    "quantity_owned": 7.0,
    "purchase_history": [
      {
        "bought_at": "[TIMESTAMP]",
        "bought_for": 9.5,
        "quantity_bought": 7.0,
        "value_delta": 0.0
      }
    ]
  },
  {
    "id": 3,
    "name": "Lite Coin",
    "unit_value": 2.75,
    "value_delta": 0.0,
    "quantity_owned": 4.0,
    "purchase_history": [
      {
        "bought_at": "[TIMESTAMP]",
        "bought_for": 2.75,
        "quantity_bought": 4.0,
        "value_delta": 0.0
      }
    ]
  }
]
