carteira_investimentos/src/tests/assets_tests/snapshots/carteira_investimentos__tests__assets_tests__test_repository__tests__list_owned_assets.snap
---
source: src/tests/assets_tests/test_repository.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 10.05,
    "value_delta": 0.0,
    "quantity_owned": 5.0,
    "purchase_history": [
      {
        "bought_at": "[TIMESTAMP]",
        "bought_for": 10.05,
        "quantity_bought": 5.0,
        "value_delta": 0.0
      }
    ]
  }
]
