carteira_investimentos/src/tests/assets_tests/snapshots/carteira_investimentos__tests__assets_tests__test_repository__tests__list_registrant_assets-2.snap
---
source: src/tests/assets_tests/test_repository.rs
expression: assets2
---
[
  {
    "id": 3,
    "name": "Lite Coin",
    "unit_value": 2.75,
    "registrant_id": 2,
    "registered_at": "[TIMESTAMP]"
  }
]
